버그 수정 및 테스트용 앱 제작
